# PatateChaudeClient

./: .gitignore  Cargo.toml  Dockerfile  README.md  recover_secret
.github/workflows/: master.workflow.yml
src/: challenge.rs  challenge_message.rs  client_message.rs  connection_handler.rs  main.rs  md5cash_challenge.rs  monstrous_maze.rs  monstrous_maze_challenge.rs  recover_secret.rs  recover_secret_challenge.rs  server_message.rs
src/challenge_monstrous_maze/: mod.rs  monstrous_maze.rs  monstrous_maze_challenge.rs
src/challenge_monstrous_maze/utils/: mod.rs  monstrous_maze_utils.rs
src/challenge_recover_secret/: mod.rs  recover_secret.rs  recover_secret_challenge.rs
