[package]
name = "patate_chaude_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.7", features = ["derive"] }
md5 = "0.7.0"
num_cpus = "1.0"
serde = { version = "1", features = ["serde_derive"]}
serde_json = "1"
